# cei_data

./: .env.example  .gitignore  README.md  data (1).js  data (2).js  data.js  eslint.config.js  index.html  package-lock.json  package.json  prd.md  pyproject.toml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/methodology/: page.tsx
app/sources/: page.tsx
backend/cei_backend/: __init__.py  api.py  cli.py  config.py  export.py  supabase.py
backend/tests/: test_export.py
components/: admin-console.tsx  catalog-explorer.tsx  site-header.tsx  source-matrix-explorer.tsx  source-voting.tsx
data/: drk-source-matrix.seed.json  retrieval-eval.seed.json  source-candidates.seed.json
docs/: DATA_PROVENANCE.md  NEXT_STEPS_TASKS.md  RAG_RETRIEVAL_REFINEMENT.md
docs/architecture/: mvp-stack-rebuttal.md
docs/prd/: CEI_AI_Governance_Database_Source_URLs_DrK_June_2026 (Created by Dr. K) (06.27.2026).docx  [CEI AI Governance Database] AIM Objective Critique (06.27.2026).md  [CEI AI Governance Database] AIM(06.27.2026).md  [CEI AI Governance Database] Product Requirement Document (PRD) (06.27.2026).docx
lib/: catalog.ts  retrieval.ts  source-catalog.ts  supabase-browser.ts  types.ts
public/data/: analytics.json  dashboard.json  fingerprints.json  (+5 more)
scripts/: build-evidence-units.mjs  build-source-indexing-status.mjs  build-source-registry.mjs  collect-source-signals.mjs  eval-retrieval.mjs  import-cei.mjs  prepare-source-candidates.mjs  tunnel.ps1  validate-data.mjs
src/: App.css  App.tsx  index.css
supabase/: config.toml  seed.sql
(+36 files in other folders)
