[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cei-governance-data"
version = "0.1.0"
description = "Processing and export tools for the CEI Governance Atlas"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "python-dotenv>=1,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
huggingface = [
  "huggingface-hub>=0.30,<1",
  "pyarrow>=19,<22",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[project.scripts]
cei-data = "cei_backend.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/cei_backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
